--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,14 @@ body {
     margin: 0px;
     background-color: darkseagreen;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+header {
+    font-size: 3em;
+    color: crimson;
 }
 
 #container {
@@ -19,4 +25,17 @@ body {
 .gridColor {
     --gridColor: "";
     background-color: var(--gridColor);
+}
+
+#sketchArea {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+#colorSelector {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
